--- a/pillar.conf
+++ b/pillar.conf
@@ -1,8 +1,8 @@
 {
     "metadata": {
     "title":"A simple reflective object kernel",
-    "attribution":"S. Ducasse",
-    "series": "The Pharo Booklet Collection — edited by S. Ducasse"
+    "attribution":"Stéphane Ducasse",
+    "series": "The Pharo Booklet Collection"
     },
     "outputDirectory":"build",
     "mainDocument":"book",
