--- a/pillar.conf
+++ b/pillar.conf
@@ -2,7 +2,7 @@
     "metadata": {
     "title":"A simple reflective object kernel",
     "attribution":"Stéphane Ducasse",
-    "series": "Pharo Academic Booklet Collection"
+    "series": "Pharo TextBook Booklet Collection"
     },
     "outputDirectory":"build",
     "mainDocument":"book",
