--- a/pillar.conf
+++ b/pillar.conf
@@ -1,28 +1,17 @@
 {
-    "metadata": {
     "title":"A simple reflective object kernel",
     "attribution":"Stéphane Ducasse",
-    "series": "The Pharo TextBook Collection"
-    },
-    "outputDirectory":"build",
-    "mainDocument":"book",
-    "latexTemplate":"support/templates/main.latex.mustache",
-    "latexChapterTemplate":"support/templates/chapter.latex.mustache",
-    "htmlTemplate":"support/templates/html.mustache",
-    "htmlChapterTemplate":"support/templates/html.mustache",
-    "chapters":[
- 	"Chapters/ObjV/ObjV",
- 	"Chapters/ObjVTheory/ObjVTheory"
-	],
-    "newLine":#unix,
-    "configurations": {
-    "LaTeX" : {
-      "outputType":#'latex:sbabook',
-      "separateOutputFiles":true
-    },
-    "HTML" : {
-      "outputType":#html,
-      "separateOutputFiles":true
-    }
-  }
+    "series": "The Pharo TextBook Collection",
+
+  "outputDirectory": "build",
+  "inputFile":"book.pillar",
+  "mainDocument": "book",
+  "latexTemplate": "_support/templates/main.latex.mustache",
+  "latexChapterTemplate": "_support/templates/chapter.latex.mustache",
+  "htmlTemplate": "_support/templates/html.mustache",
+  "htmlChapterTemplate": "_support/templates/html.mustache",
+  "newLine": #unix,
+  "latexWriter": #'latex:sbabook',
+  "htmlWriter": #html
 }
+
