--- a/pillar.conf
+++ b/pillar.conf
@@ -1,5 +1,5 @@
 {
-  "base_url": "/book.html",
+  "base_url": "/Booklet-AReflectiveKernel",
   "site_name": "Pharo Book",
   "title":"A simple reflective object kernel",
   "attribution":"Stéphane Ducasse",
