--- a/pillar.conf
+++ b/pillar.conf
@@ -8,7 +8,7 @@
   "language": "en-UK",
   "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
   
-  "tocFile": "book.pillar",
+  "tocFile": "index.pillar",
   "htmlTemplate": "_support/templates/html.mustache",
   "htmlChapterTemplate": "_support/templates/html.mustache",
   "htmlWriter": #html
