--- a/pillar.conf
+++ b/pillar.conf
@@ -9,7 +9,13 @@
   "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
   
   "tocFile": "index.pillar",
+  "outputDirectory": "build",
+  "mainDocument": "book",
+  "latexTemplate": "_support/templates/main.latex.mustache",
+  "latexChapterTemplate": "_support/templates/chapter.latex.mustache",
   "htmlTemplate": "_support/templates/html.mustache",
   "htmlChapterTemplate": "_support/templates/html.mustache",
+  "newLine": #unix,
+  "latexWriter": #'latex:sbabook',
   "htmlWriter": #html
 }
