--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
-_result
-build/
-.DS_Store
-Pharo.changes
-Pharo.image
-
-pharo
-pharo-ui
-pharo-vm/
-
-pillar
-mustache
+*.aux
+*.log
+*.blg
+*.out
+*.synctex.gz
+*.DS_Store
