--- a/pillar.conf
+++ b/pillar.conf
@@ -9,6 +9,7 @@
   "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
   "tocFile": "index.pillar",
   "latexWriter" : #'latex:sbabook',
+  "plugins": ["PRCitationTransformer"],
   "newLine": #unix,
   "htmlWriter": #html
 }
