adding bib support

--- a/pillar.conf
+++ b/pillar.conf
@@ -10,6 +10,7 @@
   "tocFile": "index.pillar",
   "latexWriter" : #'latex:sbabook',
   "plugins": ["PRCitationTransformer"],
+  "bibFile": "others.bib",
   "newLine": #unix,
   "htmlWriter": #html
 }
