--- a/pillar.conf
+++ b/pillar.conf
@@ -1,10 +1,10 @@
 {
   "base_url": "/booklet-ReflectiveCore/html",
-  "site_name": "Pharo Book",
+  "site_name": "Understanding reflective kernels",
   "title":"A simple reflective object kernel",
   "attribution":"Stéphane Ducasse",
   "series": "The Pharo TextBook Collection",
-  "keywords": "project template, Pillar, Pharo, Smalltalk",
+  "keywords": "bootstrap, reflective, meta system, Pharo, Smalltalk",
   "language": "en-UK",
   "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
   "tocFile": "index.pillar",
