--- a/pillar.conf
+++ b/pillar.conf
@@ -1,16 +1,1 @@
-{
-  "base_url": "/booklet-ReflectiveCore/html",
-  "site_name": "Understanding reflective kernels",
-  "title":"A simple reflective object kernel",
-  "attribution":"Stéphane Ducasse",
-  "series": "The Pharo TextBook Collection",
-  "keywords": "bootstrap, reflective, meta system, Pharo, Smalltalk",
-  "language": "en-UK",
-  "epub-id": "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",
-  "tocFile": "index.pillar",
-  "latexWriter" : #'latex:sbabook',
-  "plugins": ["PRCitationTransformer"],
-  "bibFile": "others.bib",
-  "newLine": #unix,
-  "htmlWriter": #html
-}
+{	"language" : "en-UK",	"base_url" : "/booklet-ReflectiveCore/html",	"attribution" : "Stéphane Ducasse",	"keywords" : "bootstrap, reflective, meta system, Pharo, Smalltalk",	"title" : "A simple reflective object kernel",	"newLine" : "unix",	"series" : "The Pharo TextBook Collection",	"htmlWriter" : "html",	"epub-id" : "urn:uuid:A1B0D67E-2E81-4DF5-9E67-A64CBE366809",	"latexWriter" : "miclatex:sbabook",	"site_name" : "Understanding reflective kernels",	"bibFile" : "others.bib",	"tocFile" : "index.pillar"}
